More fixes Header Labels appear Distorted / Misaligned in GRID view #3239

--- a/public/admin/assets/css/styles.css
+++ b/public/admin/assets/css/styles.css
@@ -12300,7 +12300,7 @@ table.grid thead tr {
   width: 100%;
 }
 table.grid thead th {
-  width: 16.3%;
+  width: 16.29%;
   display: inline-block;
 }
 table.grid tbody {
