--- a/public/less/sections/tables.less
+++ b/public/less/sections/tables.less
@@ -33,7 +33,7 @@ table.grid {
             width: 100%;
         }
         th {
-            width: 16.3%;
+            width: 16.29%;
             display: inline-block;
         }        
     }
